[package]
name = "genome_comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-files = "0.6"
actix-web-actors = "4.2"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
rand = "0.8"
rayon = "1.7"
bio = "1.1"
env_logger = "0.11.5"
log = "0.4.22"
bincode = "1.3.3"

[profile.release]
debug = true
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
debug-assertions = false
overflow-checks = false
lto = "thin"
opt-level = 3
codegen-units = 1
